--- a/machine-learning/hw1/hw1.tex
+++ b/machine-learning/hw1/hw1.tex
@@ -221,8 +221,10 @@ p(y | \xx_i,\beta_0,\beta) = \frac{1}{1 + \myexp{-y_i(\beta_0 + \bket{\beta}{\xx
 Write a matlab function that computes log probability of label $y$ given a vector of features $\xx$ and $\beta_0,\beta$.
 \begin{verbatim}
 function logP = logProbLogReg(y,X,beta0,beta)
-logP = log( .... )
+    logP = log(1 ./ (1 + exp(-1 .* y .* (beta0 + beta * X))));
+end
 \end{verbatim}
+
 Now write a matlab function that uses the above function to compute log probability of label $+1$ for a vector of features $\xx$ and $\beta_0,\beta$
 \begin{verbatim}
 function predY = predictY(X,beta0,beta)
@@ -232,8 +234,16 @@ if logProbY > ...
 else
     predY = ...
 end
-\end{verbatim}
 
+function predY = predictY(X, beta0, beta)
+    logProbY = logProbLogReg(1, X, beta0, beta);
+    if logProbY > 0 % needs to be filled
+        predY = 1; % needs to be filled
+    else
+        predY = 1; % needs to be filled
+    end
+end
+\end{verbatim}
 
 \newproblem{1pt}
 Given Eq.\eqref{eq:plr} we can write out log-likelihood
@@ -245,7 +255,7 @@ Now using function $\texttt{logProbLogReg}$ that you obtained for the previous p
 function val = LogLikLogReg(y,X,beta0,beta)
 val = 0;
 for i=1:length(y)
-   val = val + ...
+    val = val + logProbLogReg(y(i), X(i), beta0, beta);
 end
 \end{verbatim}
 \newproblem{1pt}
